# polymarket-bot

./: .gitignore  README.md  config.yaml  pyproject.toml
docs/: bot-postmortems.md
docs/superpowers/plans/: 2026-05-14-polymarket-bot1-implementation.md
docs/superpowers/specs/: 2026-05-13-polymarket-bot1-design.md
scripts/: check_markets.py  run_backtest.py  run_paper.py
src/polybot/: __init__.py  btc_feed.py  config.py  portfolio.py  recorder.py  runner.py  types.py
src/polybot/executor/: base.py  paper.py
src/polybot/feed/: base.py  historical.py  live.py
src/polybot/strategy/: __init__.py  bot1.py  bot2_filter.py  bot2_signal.py  bot3_dipbuyer.py  bot4_rallyfader.py  bot5_bothsides.py  bot6_smartdipbuyer.py  bot7_speculation.py
tests/: test_bot2_filter.py  test_bot2_signal.py  test_bot3_dipbuyer.py  test_bot4_rallyfader.py  test_bot5_bothsides.py  test_bot6_smartdipbuyer.py  test_bot7_speculation.py  test_config.py  test_historical_feed.py  test_paper_executor.py  test_portfolio.py  test_recorder.py  test_runner_integration.py  test_strategy.py  test_types.py
tests/fixtures/: tiny_session.jsonl
