[project]
name = "polybot"
version = "0.1.0"
description = "Polymarket Bot 1 — 5-minute BTC up/down paper trader"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "websockets>=12.0",
  "pydantic>=2.6",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
